# quies

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: deploy.yaml  deploy.yml  gradle-wrapper-validation.yml  post-merge.yaml  pre-merge.yaml
app/: build.gradle.kts  debug.keystore  google-services.json  lint-baseline.xml  proguard-rules.pro
app/src/androidTest/java/dev/simonas/quies/: AppMainTest.kt  ComponentTest.kt  FactorialTest.kt  HiltTestRunner.kt  MainActivityTest.kt  Screenshots.kt  TestAnalyticsModule.kt  TestAppModule.kt  UITest.kt
app/src/main/: AndroidManifest.xml
app/src/main/play/: contact-email.txt  contact-website.txt
app/src/main/play/listings/en-US/: full-description.txt  short-description.txt  title.txt
app/src/main/res/drawable/: ic_launcher_c_back.xml  ic_launcher_c_fore.xml  ic_launcher_c_fore_smpl.xml  ic_launcher_q_background.xml  ic_launcher_q_foreground.xml  ic_launcher_q_monochrome.xml  logo.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_c.xml  ic_launcher_q.xml
app/src/main/res/raw/: wave.frag
app/src/main/res/values/: strings.xml  styles.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Coordinates.kt
config/detekt/: detekt.yml
data/: build.gradle.kts  createAsset.sh  downloadProdSource.sh  replaceSecrets.sh  source.yaml
data/src/main/assets/: data.yaml.enc
data/src/main/cpp/: CMakeLists.txt  q_secrets.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+103 files in other folders)
